fixed the button overlap

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -42,7 +42,7 @@ body {
 }
 #wi{
   position:relative;
-  top:100px;
+  top:80px;
   margin:auto;
   max-width:300px;
   width:60%;
@@ -50,7 +50,7 @@ body {
 }
 #re{
   position:relative;
-  top:40px;
+  top:80px;
   margin:auto;
   max-width:300px;
   width:60%;
@@ -58,7 +58,7 @@ body {
 }
 #map{
   position:relative;
-  top:10px;
+  top:80px;
   margin:auto;
   max-width:250px;
   width:60%;
